# hornet-finder

./: .env.dev.example  .env.prod.example  .gitignore  Dockerfile  README.md  build-frontend-prod.sh  build-frontend.sh  deploy-certs.sh  deploy.sh  docker-compose.dev.yml  docker-compose.dev.zfs.yml  docker-compose.prod.yml  docker-compose.prod.zfs.yml  docker-compose.yml  docker-compose.zfs.yml  dump.sql  logs.sh  nginx.conf  package-lock.json  pyproject.toml  requirements.txt  restart-nginx.sh  shutdown.sh  zfs-snapshot.sh
.github/: copilot-instructions.md
auth/: Dockerfile  README.md  docker-entrypoint-dev.sh  docker-entrypoint.sh  realm-export-dev.json  realm-export.json
backend/: Dockerfile  LICENSE  README.md  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
backend/hornet/: apps.py  models.py  serializers.py  urls.py  views.py
backend/hornet_finder_api/: authentication.py  keycloak_utils.py  settings.py  urls.py  utils.py  wsgi.py
doc/: APIARY_PERMISSIONS.md  COULEURS_IMPROVEMENT_SUMMARY.md  OVERLAP_DETECTION.md  SERVICE_WORKER_IMPROVEMENTS.md
frontend/: .env.development  .env.production  .gitignore  AXIOS_MIGRATION.md  COMPONENTS.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  PWA-AUTH-SOLUTION.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: sw-auth-extension.js
hornet/: models.py  serializers.py  urls.py  views.py
hornet_finder_api/: asgi.py  settings.py  urls.py
lib/: common.sh  test-lib.sh
nginx/: README.md
postgis/: Dockerfile  README.md  initdb-postgis.sh  update-postgis.sh
(+136 files in other folders)
